# skills-mcp-server

./: .gitignore  DESIGN.md  Dockerfile  LICENSE  README.md  SPEC.md  dashboard_text.txt  docker-compose.central.yml  docker-compose.yml  pyproject.toml
.cursor/: mcp.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
config/: config.yaml
docs/: agentic-sdlc.md  security_audit_v0.1.md  security_audit_v0.2.md  skills-sync-architecture.md  subprocess_protocol.md
scripts/: conformance.py
skills-sync/: README.md  pyproject.toml
skills-sync/src/skills_sync/: __init__.py  cli.py  core.py
skills-sync/tests/: test_core.py
skills/example-greeting/: SKILL.md
skills/roles/architect/: ADR_TEMPLATE.md  REFERENCE.md  SKILL.md
skills/roles/architect-reviewer/: REVIEW_CHECKLIST.md  SKILL.md
skills/roles/cloudops/: POSTMORTEM_TEMPLATE.md  REFERENCE.md  RUNBOOK_TEMPLATE.md  SKILL.md
skills/roles/cloudops-reviewer/: REVIEW_CHECKLIST.md  SKILL.md
skills/roles/design-reviewer/: REVIEW_CHECKLIST.md  SKILL.md
skills/roles/designer/: HANDOFF_TEMPLATE.md  REFERENCE.md  SKILL.md
skills/roles/dev/: PR_TEMPLATE.md  REFERENCE.md  SKILL.md
skills/roles/dev-reviewer/: REVIEW_CHECKLIST.md  SKILL.md
skills/roles/devops/: PIPELINE_TEMPLATE.md  REFERENCE.md  SKILL.md
skills/roles/devops-reviewer/: REVIEW_CHECKLIST.md  SKILL.md
skills/roles/product-manager/: PRD_TEMPLATE.md  REFERENCE.md  SKILL.md
skills/roles/product-manager-reviewer/: REVIEW_CHECKLIST.md  SKILL.md
skills/roles/project-manager/: LAUNCH_CHECKLIST.md  REFERENCE.md  RISK_REGISTER_TEMPLATE.md  SKILL.md  STATUS_TEMPLATE.md
skills/roles/project-manager-reviewer/: REVIEW_CHECKLIST.md  SKILL.md
skills/roles/qa/: DEFECT_TEMPLATE.md  REFERENCE.md  SKILL.md
skills/roles/qa-reviewer/: REVIEW_CHECKLIST.md  SKILL.md
skills/roles/sdet/: REFERENCE.md  SKILL.md  TEST_PLAN_TEMPLATE.md
skills/roles/sdet-reviewer/: REVIEW_CHECKLIST.md  SKILL.md
src/skills_mcp_server/: __init__.py  __main__.py  admin_ui.py  cli.py  config.py  executor.py  http_transport.py  mcp_app.py  models.py  registry.py
src/skills_mcp_server/sources/: base.py  git.py  local.py
tests/: README.md  conftest.py
tests/fixtures/skills/local-sample/broken-skill/: SKILL.md
tests/fixtures/skills/local-sample/hello-world/: SKILL.md
tests/fixtures/skills/local-sample/summarize-text/: SKILL.md  reference.md
tests/unit/: test_admin_ui.py  test_cli_daemons.py  test_config.py  test_executor.py  test_git_source.py  test_http_transport.py  test_local_source.py  test_mcp_app.py  test_registry.py  test_security.py
venv312/: pyvenv.cfg
